--- a/cv/003.html
+++ b/cv/003.html
@@ -42,9 +42,6 @@
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
-
-	<!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'> -->
-	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -62,277 +59,6 @@
 	<![endif]-->
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-	<style>
-
-	/* Header */
-
-	#header {
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
-		display: flex;
-		-moz-flex-direction: column;
-		-webkit-flex-direction: column;
-		-ms-flex-direction: column;
-		flex-direction: column;
-		-moz-align-items: center;
-		-webkit-align-items: center;
-		-ms-align-items: center;
-		align-items: center;
-		-moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		background-image: -moz-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		background-image: -webkit-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		background-image: -ms-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		background-image: radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		max-width: 100%;
-		text-align: center;
-	}
-
-		#header > * {
-			-moz-transition: opacity 0.325s ease-in-out;
-			-webkit-transition: opacity 0.325s ease-in-out;
-			-ms-transition: opacity 0.325s ease-in-out;
-			transition: opacity 0.325s ease-in-out;
-			position: relative;
-			margin-top: 3.5rem;
-		}
-
-			#header > *:before {
-				content: '';
-				display: block;
-				position: absolute;
-				top: calc(-3.5rem - 1px);
-				left: calc(50% - 1px);
-				width: 1px;
-				height: calc(3.5rem + 1px);
-				background: #ffffff;
-			}
-
-		#header > :first-child {
-			margin-top: 0;
-		}
-
-			#header > :first-child:before {
-				display: none;
-			}
-
-		#header .logo {
-			width: 5.5rem;
-			height: 5.5rem;
-			line-height: 5.5rem;
-			border: solid 1px #ffffff;
-			border-radius: 100%;
-		}
-
-			#header .logo .icon:before {
-				font-size: 2rem;
-			}
-
-		#header .content {
-			border-style: solid;
-			border-color: #ffffff;
-			border-top-width: 1px;
-			border-bottom-width: 1px;
-			max-width: 100%;
-		}
-
-			#header .content .inner {
-				-moz-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
-				-webkit-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
-				-ms-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
-				transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
-				-moz-transition-delay: 0.25s;
-				-webkit-transition-delay: 0.25s;
-				-ms-transition-delay: 0.25s;
-				transition-delay: 0.25s;
-				padding: 3rem 2rem;
-				max-height: 40rem;
-				overflow: hidden;
-			}
-
-				#header .content .inner > :last-child {
-					margin-bottom: 0;
-				}
-
-			#header .content p {
-				text-transform: uppercase;
-				letter-spacing: 0.2rem;
-				font-size: 0.8rem;
-				line-height: 2;
-			}
-
-		#header nav ul {
-			display: -moz-flex;
-			display: -webkit-flex;
-			display: -ms-flex;
-			display: flex;
-			margin-bottom: 0;
-			list-style: none;
-			padding-left: 0;
-			border: solid 1px #ffffff;
-			border-radius: 4px;
-		}
-
-			#header nav ul li {
-				padding-left: 0;
-				border-left: solid 1px #ffffff;
-				width: 200px;
-			}
-
-				#header nav ul li:first-child {
-					border-left: 0;
-				}
-
-				#header nav ul li a {
-					display: block;
-					min-width: 7.5rem;
-					height: 2.75rem;
-					line-height: 2.75rem;
-					padding: 0 1.25rem 0 1.45rem;
-					text-transform: uppercase;
-					letter-spacing: 0.2rem;
-					font-size: 0.8rem;
-					border-bottom: 0;
-				}
-
-					#header nav ul li a:hover {
-						background-color: rgba(255, 255, 255, 0.075);
-					}
-
-					#header nav ul li a:active {
-						background-color: rgba(255, 255, 255, 0.175);
-					}
-
-		#header nav.use-middle:after {
-			content: '';
-			display: block;
-			position: absolute;
-			top: 0;
-			left: calc(50% - 1px);
-			width: 1px;
-			height: 100%;
-			background: #ffffff;
-		}
-
-		#header nav.use-middle ul li.is-middle {
-			border-left: 0;
-		}
-
-		body.is-article-visible #header {
-			-moz-transform: scale(0.95);
-			-webkit-transform: scale(0.95);
-			-ms-transform: scale(0.95);
-			transform: scale(0.95);
-			-moz-filter: blur(0.1rem);
-			-webkit-filter: blur(0.1rem);
-			-ms-filter: blur(0.1rem);
-			filter: blur(0.1rem);
-			opacity: 0;
-		}
-
-		body.is-preload #header {
-			-moz-filter: blur(0.125rem);
-			-webkit-filter: blur(0.125rem);
-			-ms-filter: blur(0.125rem);
-			filter: blur(0.125rem);
-		}
-
-			body.is-preload #header > * {
-				opacity: 0;
-			}
-
-			body.is-preload #header .content .inner {
-				max-height: 0;
-				padding-top: 0;
-				padding-bottom: 0;
-				opacity: 0;
-			}
-
-		@media screen and (max-width: 980px) {
-
-			#header .content p br {
-				display: none;
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			#header > * {
-				margin-top: 2rem;
-			}
-
-				#header > *:before {
-					top: calc(-2rem - 1px);
-					height: calc(2rem + 1px);
-				}
-
-			#header .logo {
-				width: 4.75rem;
-				height: 4.75rem;
-				line-height: 4.75rem;
-			}
-
-				#header .logo .icon:before {
-					font-size: 1.75rem;
-				}
-
-			#header .content .inner {
-				padding: 2.5rem 1rem;
-			}
-
-			#header .content p {
-				line-height: 1.875;
-			}
-
-		}
-
-		@media screen and (max-width: 480px) {
-
-			#header {
-				padding: 1.5rem 0;
-			}
-
-				#header .content .inner {
-					padding: 2.5rem 0;
-				}
-
-				#header nav ul {
-					-moz-flex-direction: column;
-					-webkit-flex-direction: column;
-					-ms-flex-direction: column;
-					flex-direction: column;
-					min-width: 10rem;
-					max-width: 100%;
-				}
-
-					#header nav ul li {
-						border-left: 0;
-						border-top: solid 1px #ffffff;
-					}
-
-						#header nav ul li:first-child {
-							border-top: 0;
-						}
-
-						#header nav ul li a {
-							height: 3rem;
-							line-height: 3rem;
-							min-width: 0;
-							width: 100%;
-						}
-
-				#header nav.use-middle:after {
-					display: none;
-				}
-
-		}
-
-	</style>
 
 	</head>
 	<body style="background-image: linear-gradient(rgba(39, 34, 34, 0.790), rgba(0, 0, 0, 0.9)), url(../images/home-banner.jpg);">
@@ -370,63 +96,30 @@
 								<img src="images/profile_img3.png" alt="Micael">
 							</figure>
 							<h1>Micael Schutz</h1>
-							<p>Atualmente, estou cursando Tecnólogo em Segurança da Informação pela Uniritter. Possuo 2 anos de experiência na área administrativa e estou em transição de carreira, buscando aprender Cloud e programação, e procurando uma vaga nessa área. Estou engatinhando, porém meu foco e determinação me levarão longe. </p>
+							<p class="custom-text">Atualmente, estou cursando Tecnólogo em Segurança da Informação pela Uniritter. Possuo 2 anos de experiência na área administrativa e estou em transição de carreira, buscando aprender Cloud e programação, e procurando uma vaga nessa área. Estou engatinhando, porém meu foco e determinação me levarão longe. </p>
 						</div>
 					</div>
-					
-					<!--
-					<div class="row">
-						<div class="col-md-12 fh5co-counter">
-							<div class="fh5co-number fh5co-left">10</div>
-							<div class="fh5co-text">
-								<h3 class="border-bottom">Anos de experiência em Web Design</h3>
-								<p></p>
-							</div>
-						</div>
-					</div>
-					-->
-
 					<ul class="fh5co-social">
 						<li><a href="mailto:micaelschutz04@gmail.com" title="Entrar em contato"><i class="icon-envelope"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/micaelschutz/" target="_blank" title="Perfil no LinkedIn"><i class="icon-linkedin"></i></a></li>
 						<li><a href="https://github.com/MicaelSchutz" target="_blank" title="Contribuições no Github"><i class="icon-github"></i></a></li>
 						<li><a href="CV.Micael.Schutz.pdf" target="_blank" title="Currículo versão PDF"><i class="icon-file-pdf-o"></i></a></li>
-						<!--
-						<li><a href="#"><i class="icon-twitter"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
-						<li><a href="#"><i class="icon-google"></i></a></li>
-						-->
 					</ul>
-
 				</div>
 			</div>
 			<div class="fh5co-tab-content" data-content="2">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
-
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
 									<h2>05/2022 &mdash; 06/2024</h2>
-									<p>Tecnólogo em Segurança da Informação - 3º Semestre - EAD Centro Universitário Ritter dos Reis.</p>
+									<p class="custom-text-left">Tecnólogo em Segurança da Informação - 3º Semestre - EAD Centro Universitário Ritter dos Reis.</p>
 								</div>
 							</div>
-
-							<!--
-							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-									<i class="icon-graduation-cap"></i>
-								</div>
-								<div class="fh5co-text">
-									<h2>2008-2012</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
-								</div>
-							</div>
-							-->
 
 						</div>
 						
@@ -437,9 +130,6 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-
-							<!-- <p>I have the privilege to work with these cool companies.</p> -->
-
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-black-tie"></i>
@@ -448,7 +138,7 @@
 									<h2>05/2022 &mdash; Atual</h2>
 									<h3>TK Elevadores do Brasil LTDA</h3>
 									<h3>Estágio</h3>
-									<p>Desenvolvimento de relatórios, arquivamento de documentos, criação de planilhas eletrônicas, inserção de contratos e cancelamentos no sistema, e outras atividades relacionadas à administração.</p>
+									<p class="custom-text-left">Desenvolvimento de relatórios, arquivamento de documentos, criação de planilhas eletrônicas, inserção de contratos e cancelamentos no sistema, e outras atividades relacionadas à administração.</p>
 								</div>
 							</div>
 
@@ -460,7 +150,7 @@
 									<h2>02/2021 &mdash; 02/2022</h2>
 									<h3>Banrisul S.A. Corretora de Valores Mobiliários e Câmbio</h3>
 									<h3>Estágio</h3>
-									<p>Preenchimento de planilhas eletrônicas, abertura de ordens de serviço e outras tarefas administrativas.</p>
+									<p class="custom-text-left">Preenchimento de planilhas eletrônicas, abertura de ordens de serviço e outras tarefas administrativas.</p>
 								</div>
 							</div>
 
@@ -472,9 +162,6 @@
 			<div class="fh5co-tab-content" data-content="4">
 				<div class="fh5co-content-inner">
 					<div class="row">
-						<div class="col-md-12">
-							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
-						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 							<div class="chart" data-percent="50"><span><strong>AWS Cloud</strong>50%</span></div>
 						</div>
@@ -491,12 +178,6 @@
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 							<div class="chart" data-percent="35"><span><strong>Visual Studio</strong>35%</span></div>
 						</div>
-
-						<!--
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
-						</div>
-						-->
 					</div>
 				</div>
 			</div>
