Aplicado o Clean code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta name="author" content="Erivando Sena" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<title>Currículo Online &mdash; UP DevOps</title>
-		<meta property="og:title" content="TUP DevOps - Website de Currículos" />
+		<meta property="og:title" content="UP DevOps - Website de Currículos (Grupo 8)" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="WEBSITE PARA DIVULGAÇÃO DE CURRÍCULO">
 		<meta property="og:url" content="https://www.updevops.com.br/" />
