--- a/erro.html
+++ b/erro.html
@@ -9,18 +9,18 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta http-equiv="refresh" content="15;url=index.html" />
+		<meta http-equiv="refresh" content="10;url=https://www.updevops.com.br" />
 		<title>Currículo Online &mdash; Erro</title>
 		<meta name="robots" content="noindex,nofollow">
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="./assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="./assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-            <img src="images/erro-pagina.gif" />
+				<img src="./images/erro-pagina.gif" class="imagem-erro"/>
 
         <!-- Header -->
             <header id="header">
@@ -31,7 +31,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li style="width: 325px;"><a href="index.html">Voltar para Home</a></li>
+                        <li style="width: 295px;"><a href="https://www.updevops.com.br">Voltar para Home</a></li>
                     </ul>
                 </nav>
             </header>
