--- a/cv/001.html
+++ b/cv/001.html
@@ -94,7 +94,7 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/profile_img1.png" alt="Erivando Sena Ramos">
+								<img src="images/profile_img1.png" alt="Erivando Sena">
 							</figure>
 							<h1>Erivando Sena Ramos</h1>
 							<p class="custom-text">Possui especialização em Engenharia DevOps, Desenvolvedor Full Stack e há 2 anos atua 
