--- a/cv/002.html
+++ b/cv/002.html
@@ -94,9 +94,9 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/profile_img2.png" alt="Laerte">
+								<img src="images/profile_img2.png" alt="Laerte Júnior">
 							</figure>
-							<h1>Laerte Porto Junior</h1>
+							<h1>Laerte Porto Júnior</h1>
 							<p class="custom-text">Formado em Analise de Sistemas e Pós Graduado na área da Segurança da Informação pela Universo e com experiência de + 10 anos na área da tecnologia, atuando como sysadmin onpremisse, passo por uma transição de carreira onde busco conhecer e aprender a implementar estratégias de migração de aplicações para a Cloud como Devops, visando a redução de custos e aumento de desempenho para isso almejo uma oportunidade para atuar na área de TI, com foco em Cloud. </p>
 						</div>
 					</div>
