--- a/cv/003.html
+++ b/cv/003.html
@@ -93,9 +93,9 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/profile_img3.png" alt="Micael">
+								<img src="images/profile_img3.png" alt="Micael Schutz">
 							</figure>
-							<h1>Micael Schutz</h1>
+							<h1>Micael Schutz dos Santos</h1>
 							<p class="custom-text">Atualmente, estou cursando Tecnólogo em Segurança da Informação pela Uniritter. Possuo 2 anos de experiência na área administrativa e estou em transição de carreira, buscando aprender Cloud e programação, e procurando uma vaga nessa área. Estou engatinhando, porém meu foco e determinação me levarão longe. </p>
 						</div>
 					</div>
