--- a/index.html
+++ b/index.html
@@ -80,28 +80,28 @@
 								<section>
 								<ul class="card-list">
 									<li class="card">
-									<img src="cv/images/profile_img2.png" alt="Laerte" />
+									<img src="cv/images/profile_img2.png" alt="Laerte Júnior" />
 									<div class="card-content">
-										<h4><a href="cv/002.html" title="Saber mais...">Laerte Porto Junior</a></h4>
+										<h4><a href="cv/002.html" title="Saber mais...">Laerte Porto Júnior</a></h4>
 										<p class="card-description">Formado em Análise de Sistemas e Pós Graduado na área de Segurança da Informação pela Universo. Experiência de +10 anos na área de tecnologia, atuando como sysadmin on-premise. Atualmente, em transição de carreira para a área de Cloud como DevOps, buscando oportunidades para atuar com foco em Cloud e implementação de estratégias de migração de aplicações. </p>
 									</div>
 									</li>
 									<li class="card">
-									<img src="cv/images/profile_img1.png" alt="Erivando" />
+									<img src="cv/images/profile_img1.png" alt="Erivando Ramos" />
 									<div class="card-content">
-										<h4><a href="cv/001.html" title="Saber mais...">Erivando Sena Ramos</a></h4>
+										<h4><a href="cv/001.html" title="Saber mais...">Erivando de Sena Ramos</a></h4>
 										<p class="card-description">Mestre em Tecnologias Sustentáveis, Graduado em Análise e Desenvolvimento de Sistemas. Especialista em Engenharia DevOps e MBA em Ciência de Dados Big Data Analytics. Bacharelando em Estatística. Experiências com Desenvolvimento de Softwares, Projetos de Eletrônica, Sistemas Embarcados, Dispositivos Móveis e Internet das Coisas. Realiza pesquisas científicas em Estatística Computacional, Ciência de Dados, Big Data, IA e entusiasta DevOps.</p>
 									</div>
 									</li>
 									<li class="card">
-									<img src="cv/images/profile_img3.png" alt="Micael" />
+									<img src="cv/images/profile_img3.png" alt="Micael Santos" />
 									<div class="card-content">
-										<h4><a href="cv/003.html" title="Saber mais...">Micael Schutz</a></h4>
+										<h4><a href="cv/003.html" title="Saber mais...">Micael Schutz dos Santos</a></h4>
 										<p class="card-description">Atualmente, cursando Tecnólogo em Segurança da Informação pela Uniritter. Possui 2 anos de experiência na área administrativa e está em transição de carreira para a área de Cloud e programação. Procura por oportunidades nessa área. Determinação e foco são suas principais características para alcançar os objetivos.</p>
 									</div>
 									</li>
 									<li class="card">
-									<img src="cv/images/profile_img4.png" alt="Renato" />
+									<img src="cv/images/profile_img4.png" alt="Renato Silva" />
 									<div class="card-content">
 										<h4><a href="cv/004.html" title="Saber mais...">Renato Soares da Silva</a></h4>
 										<p class="card-description">Bacharelado em Sistemas de Informação, Técnico de Informática com grande experiência no desenvolvimento de técnicas de resolução de problemas, execução de reparações e instalação de sistemas operacionais Mac e Windows.</p>
