--- a/cv/001.html
+++ b/cv/001.html
@@ -94,13 +94,13 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/profile_img1.png" alt="Erivando Sena Ramos">
+								<img src="images/profile_img1.png" alt="Erivando Sena">
 							</figure>
 							<h1>Erivando Sena Ramos</h1>
 							<p class="custom-text">Possui especialização em Engenharia DevOps, Desenvolvedor Full Stack e há 2 anos atua 
-								como DevOps developer em constante capacitação na área da Arquitetura de Soluções em Cloud. 
+								como DevOps developer com constante capacitação na área da Arquitetura de Soluções em Cloud. 
 								Busca obter as certificações <i>AWS Certified Solutions Architect - Associate</i> e 
-								<i>AWS Certified DevOps Engineer – Professional</i>, posteriormente certificações da Azure e Google Cloud Platform, 
+								<i>AWS Certified DevOps Engineer - Professional</i> e posteriormente certificações da Azure e Google Cloud Platform, 
 								a fim de poder seguir profissionalmente como Cloud DevOps Engineer ou Arquiteto em Cloud Computing. 
 								Com propósito de projetar soluções escaláveis, otimizar o desempenho dos sistemas, 
 								crescer profissionalmente e colaborar em projetos desafiadores contribuindo para o sucesso das organizações.
