Update remove member

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-language" content="pt-br, en-US" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="copyright" content="© 2023 UP DevOps" />
-		<meta name="description" content="Site de Currículos. Grupo 8: Erivando Sena; Micael; Laerte; Renato. Mentor TCC: Rodolfo @Homaru">
+		<meta name="description" content="Site de Currículos. Grupo 8: Erivando Sena; Micael Schutz dos Santos Laerte Porto Júnior; Mentor TCC: Rodolfo @Homaru">
 		<meta name="keywords" content="up devops, updevops, curriculos, escola da nuvem, edn, aws, bucket s3, cloudfront, certificate manager, registro.br, html5, css3, mobile, website responsive" />
 		<meta name="author" content="Erivando Sena" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -98,13 +98,6 @@
 									<div class="card-content">
 										<h4><a href="cv/003.html" title="Saber mais...">Micael Schutz dos Santos</a></h4>
 										<p class="card-description">Atualmente, cursando Tecnólogo em Segurança da Informação pela Uniritter. Possui 2 anos de experiência na área administrativa e está em transição de carreira para a área de Cloud e programação. Procura por oportunidades nessa área. Determinação e foco são suas principais características para alcançar os objetivos.</p>
-									</div>
-									</li>
-									<li class="card">
-									<img src="cv/images/profile_img4.png" alt="Renato Silva" />
-									<div class="card-content">
-										<h4><a href="cv/004.html" title="Saber mais...">Renato Soares da Silva</a></h4>
-										<p class="card-description">Bacharelado em Sistemas de Informação, Técnico de Informática com grande experiência no desenvolvimento de técnicas de resolução de problemas, execução de reparações e instalação de sistemas operacionais Mac e Windows.</p>
 									</div>
 									</li>
 								</ul>
