--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-language" content="pt-br, en-US" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="copyright" content="© 2023 UP DevOps" />
-		<meta name="description" content="Site de Currículos. Grupo 8: Erivando Sena; Micael Schutz dos Santos Laerte Porto Júnior; Mentor TCC: Rodolfo @Homaru">
+		<meta name="description" content="Site de Currículos. Grupo 8: Erivando Sena. Mentor TCC: Rodolfo @Homaru">
 		<meta name="keywords" content="up devops, updevops, curriculos, escola da nuvem, edn, aws, bucket s3, cloudfront, certificate manager, registro.br, html5, css3, mobile, website responsive" />
 		<meta name="author" content="Erivando Sena" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -80,24 +80,10 @@
 								<section>
 								<ul class="card-list">
 									<li class="card">
-									<img src="cv/images/profile_img2.png" alt="Laerte Júnior" />
-									<div class="card-content">
-										<h4><a href="cv/002.html" title="Saber mais...">Laerte Porto Júnior</a></h4>
-										<p class="card-description">Formado em Análise de Sistemas e Pós Graduado na área de Segurança da Informação pela Universo. Experiência de +10 anos na área de tecnologia, atuando como sysadmin on-premise. Atualmente, em transição de carreira para a área de Cloud como DevOps, buscando oportunidades para atuar com foco em Cloud e implementação de estratégias de migração de aplicações. </p>
-									</div>
-									</li>
-									<li class="card">
 									<img src="cv/images/profile_img1.png" alt="Erivando Ramos" />
 									<div class="card-content">
 										<h4><a href="cv/001.html" title="Saber mais...">Erivando de Sena Ramos</a></h4>
 										<p class="card-description">Mestre em Tecnologias Sustentáveis, Graduado em Análise e Desenvolvimento de Sistemas. Especialista em Engenharia DevOps e MBA em Ciência de Dados Big Data Analytics. Bacharelando em Estatística. Experiências com Desenvolvimento de Softwares, Projetos de Eletrônica, Sistemas Embarcados, Dispositivos Móveis e Internet das Coisas. Realiza pesquisas científicas em Estatística Computacional, Ciência de Dados, Big Data, IA e entusiasta DevOps.</p>
-									</div>
-									</li>
-									<li class="card">
-									<img src="cv/images/profile_img3.png" alt="Micael Santos" />
-									<div class="card-content">
-										<h4><a href="cv/003.html" title="Saber mais...">Micael Schutz dos Santos</a></h4>
-										<p class="card-description">Atualmente, cursando Tecnólogo em Segurança da Informação pela Uniritter. Possui 2 anos de experiência na área administrativa e está em transição de carreira para a área de Cloud e programação. Procura por oportunidades nessa área. Determinação e foco são suas principais características para alcançar os objetivos.</p>
 									</div>
 									</li>
 								</ul>
@@ -154,8 +140,6 @@
 											<select name="prof" id="prof">
 												<option value="" selected>Selecione...</option>
 												<option value="erivandosena@gmail.com">Erivando Sena</option>
-												<option value="micaelschutz04@gmail.com">Micael Schutz</option>
-												<option value="laertep@gmail.com">Laerte Porto</option>
 											</select>
 										</div>
 									</div>
